# linux_commands

./: .gitignore  README.md
src/: CMakeLists.txt
src/cat/: CMakeLists.txt  cat.c  test.sh
src/cd/: CMakeLists.txt  cd.c
src/df/: CMakeLists.txt  df.c
src/echo/: CMakeLists.txt  echo.c
src/ls/: CMakeLists.txt  ls.c
src/mv/: CMakeLists.txt  mv.c  test.sh
src/pwd/: CMakeLists.txt  pwd.c
src/wc/: CMakeLists.txt  test.sh  wc.c
